# napari-segment

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conversion_widget.ipynb  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_segment/: __init__.py  _reader.py  _sample_data.py  _widget.py  _writer.py  napari.yaml
src/napari_segment/_tests/: test_dock_widget.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
