[metadata]
name = napari-segment

author = Andrey Aristov
author_email = aaristov@pasteur.fr
url = https://github.com/aaristov/napari-segment
license = BSD-3-Clause
description = Segment organoids and measure intensities
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/aaristov/napari-segment/issues
    Documentation = https://github.com/aaristov/napari-segment#README.md
    Source Code = https://github.com/aaristov/napari-segment
    User Support = https://github.com/aaristov/napari-segment/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    napari-segment = napari_segment:napari.yaml
