[metadata]
name = napari_segment
description = Segment organoids and measure intensities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaristov/napari-segment
author = Andrey Aristov
author_email = aaristov@pasteur.fr
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/aaristov/napari-segment/issues
    Documentation = https://github.com/aaristov/napari-segment#README.md
    Source Code = https://github.com/aaristov/napari-segment
    User Support = https://github.com/aaristov/napari-segment/issues

[options]
packages = find:
install_requires =
    napari
    nd2
    numpy
    scikit-image
    zarr
    matplotlib
    dask
    imageio_ffmpeg
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-segment = napari_segment:napari.yaml

[options.package_data]
* = *.yaml
